tests/errors/lexical_error_2.fm
PASTA_RAIZ "/home/usuario/documentos"
REGRA SE $EXTENSAO EH "pdf ENTAO MOVER_PARA "/arquivados" // Aspas não fechadas
